--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:id="@+id/main_fragment"
         ></FrameLayout>
     <RadioGroup
@@ -18,6 +17,7 @@
         android:orientation="horizontal"
         android:id="@+id/rg_main"
         android:background="#ac050303"
+        android:layout_alignParentBottom="true"
         >
         <RadioButton
             android:layout_width="0dp"
@@ -51,4 +51,4 @@
             />
 
     </RadioGroup>
-</LinearLayout>
+</RelativeLayout>
