--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -1,11 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="天气"
-        />
 
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <lanou.mojiweather.view.SceneSurfaceView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/weather_scene"
+        />
+    <lanou.mojiweather.tool.MyScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView_weather"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="horizontal"
+                android:id="@+id/weather_title_ll"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:textSize="20dp"
+                    android:text="数码广场"
+                    android:textColor="@android:color/white"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/tv_where"
+                    android:background="#00ffffff"
+                    />
+               <ImageView
+                   android:layout_width="30sp"
+                   android:layout_height="40dp"
+                   android:src="@mipmap/news"
+                   android:layout_marginTop="10dp"
+                   android:layout_marginLeft="180dp"
+                   android:id="@+id/iv_news"
+                   />
+                <ImageView
+                    android:layout_width="30sp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/share"
+                    />
+            </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="70dp"
+                        android:id="@+id/search_text"
+                        android:text="搜索更多天气内容"
+                        android:textColor="@android:color/darker_gray"
+                        android:background="#b3313030"
+                        android:gravity="center"
+                        />
+                    <TextView
+                        android:layout_width="100sp"
+                        android:layout_height="100dp"
+                        android:layout_below="@id/search_text"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:text="21"
+                        android:textSize="60sp"
+                        android:gravity="center"
+                        android:textColor="@android:color/white"
+                        android:background="#00ffffff"
+                        android:id="@+id/tv_temp"
+                        />
+               <ImageView
+                   android:layout_width="20sp"
+                   android:layout_height="20dp"
+                   android:src="@mipmap/leida"
+                   android:layout_toRightOf="@id/tv_temp"
+                   android:layout_below="@id/search_text"
+                   android:layout_marginTop="65dp"
+                   android:id="@+id/iv_leida"
+                   />
+                 <ImageView
+                     android:layout_width="150sp"
+                     android:layout_height="200dp"
+                     android:src="@mipmap/dlamwm"
+                     android:layout_below="@id/tv_temp"
+                     android:layout_toRightOf="@id/tv_temp"
+                     android:layout_marginTop="30dp"
+                     android:layout_marginLeft="35dp"
+                     android:id="@+id/iv_icon"
+                     />
+            <ImageView
+                android:layout_width="30sp"
+                android:layout_height="30dp"
+                android:layout_toRightOf="@id/iv_icon"
+                android:background="@drawable/animation"
+                android:layout_below="@id/tv_temp"
+                android:layout_marginTop="100dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/voice_animation"
+                android:clickable="true"
+                />
+                </RelativeLayout>
+    </lanou.mojiweather.tool.MyScrollView>
+</RelativeLayout>
