--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color_write">#ffffff</color>
+    <color name="color_black">#0b0909</color>
     <color name="weather_line">#7fffffff</color>
     <color name="weather_dot">#28bbff</color>
 </resources>
