--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="userinfo_min_height">100dp</dimen>
+    <dimen name="userinfo_common_height">200dp</dimen>
+    <dimen name="userinfo_max_height">300dp</dimen>
+
+    <dimen name="userinfo_move_marginRight">20dp</dimen>
+
+    <dimen name="font12">12sp</dimen>
+    <dimen name="font14">14sp</dimen>
+    <dimen name="font18">18sp</dimen>
+    <dimen name="font22">22sp</dimen>
+    <dimen name="font16">16sp</dimen>
 </resources>
