背景页面布局铺完

--- a/app/src/main/res/layout/fragment_background.xml
+++ b/app/src/main/res/layout/fragment_background.xml
@@ -4,17 +4,42 @@
                 android:layout_height="match_parent"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
     >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relative_layout"
+        >
+        <android.support.design.widget.TabLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="#00ffffff"
+            app:tabSelectedTextColor="#203bc4"
+            android:id="@+id/tablayout_background"
+            android:layout_toRightOf="@+id/iv_house"
+            android:layout_toLeftOf="@+id/iv_search"
+            />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@mipmap/house"
+            android:layout_margin="12dp"
+            android:id="@+id/iv_house"
+            />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@mipmap/search"
+            android:layout_alignParentRight="true"
+            android:layout_margin="12dp"
+            android:id="@+id/iv_search"
+            />
+
+    </RelativeLayout>
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/relative_layout"
         android:id="@+id/viewpager_background"
-        />
-    <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabIndicatorColor="#00ffffff"
-        app:tabSelectedTextColor="#203bc4"
-        android:id="@+id/tablayout_background"
         />
 
 
