--- a/app/src/main/res/layout/item_background_recyclerview.xml
+++ b/app/src/main/res/layout/item_background_recyclerview.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
+              android:layout_width="150sp"
               android:orientation="vertical"
-              android:layout_height="match_parent">
+              android:layout_marginLeft="20dp"
+              android:layout_height="140dp">
     <ImageView
-        android:layout_marginLeft="15dp"
         android:layout_width="150sp"
         android:layout_height="100dp"
         android:id="@+id/iv_rv_item"
         android:src="@mipmap/ic_launcher"
         android:scaleType="fitXY"
+        android:layout_marginLeft="20dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="位置"
         android:layout_alignParentBottom="true"
-        android:layout_margin="22dp"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
         android:id="@+id/tv_rv_item"
         />
