--- a/app/src/main/res/layout/widget_userinfo.xml
+++ b/app/src/main/res/layout/widget_userinfo.xml
@@ -12,7 +12,7 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:src="@mipmap/owner_friend_dynamic"
             android:id="@+id/BM_Iv_mine_head"
             android:layout_width="80dp"
