--- a/app/src/main/res/layout/input_layout.xml
+++ b/app/src/main/res/layout/input_layout.xml
@@ -25,6 +25,7 @@
               />
 
             <EditText
+                android:id="@+id/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
@@ -55,6 +56,7 @@
                 />
 
             <EditText
+                android:id="@+id/pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
